# monorepo

./: .clauderules  .cursorrules  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  ENV_AUDIT_WINDOWS_WSL_2026-03-05.md  GUARDRAILS.md  README.md  WORKSPACE.md  claude_help.txt  docker-compose.redis.yml  help.txt  log.md  plan.md  pyproject.toml
.agent/: README.md
.agent/memory/: README.md
.agent/rules/: FINISH_WITH_GIT.md  GITEA_NETWORKING.md  GLOBAL.md  LANGUAGE.md  MCP_SERVERS.md  README.md  TUTOR.md  WORKFLOW_BOUNDARIES.md  WORKTREE_STANDARD.md  finish-with-git.md
.claude/: CLAUDE.md
.context/: walkthrough.md
bootstrap/: codex-governance-wsl.sh  codex-governance.ps1  git-cycle.sh  git-worktree.sh  github-mirror-auth.sh  healthcheck-wsl.sh  healthcheck.ps1  local_validation.py  mcp-fleet.ps1  mcp-launch-docker.sh  mcp-launch-future-agents.sh  mcp-registry.toml  redis_diagnostics.py  render_mcp_configs.py  windows.ps1  wsl.sh
docs/: agent_rules.md  architecture.md  authority-hierarchy.md  cli-auth-and-mcp.md  gitea-activation-checklist.md  gitea-pr-validation.md  guide_admin_cicd.md  guide_feature_delivery.md  guide_git.md  local-model-policy.md  local-validation.md  mcp-homelab-servers.md  model-routing.md  release-candidate.md  scheduler.md  windows11-wsl2-mcp-governance.md  workflow-validation.md  workflows-overview.md
env/: .env.example  README.md  docker-compose.redis.yml
guardrails/: ci.rules  coder.rules  global.rules  planner.rules  reviewer.rules  security.rules  tester.rules
workspace/: __init__.py
(+190 files in other folders)
